Packaging as a JAR and running. Also start of lists in immBase.